--- a/index.html
+++ b/index.html
@@ -1,3 +1,61 @@
+<STYLE>
+  #lightbox {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.3);
+  display: none;
+}
+
+#lightbox.open {
+  display: block;
+}
+
+#lightbox_content {
+  position: absolute;
+  width: 500px;
+  height: 400px;
+  background: #ffffff;
+  border-radius: 3px;
+  left: 50%;
+  top: 50%;
+  margin-left: -250px;
+  margin-top: -200px;
+  text-align: center;
+}
+
+#close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  background: rgba(0, 0, 0, 0.2);
+  height: 20px;
+  width: 20px;
+  border-radius: 15px;
+  text-align: center;
+  color: #ffffff;
+  cursor: pointer;
+}
+</STYLE>
+
+<STYLE>
+  document.getElementById("clickme").addEventListener("click", function() {
+  document.getElementById("lightbox").className = "open";
+});
+
+document.getElementById("close").addEventListener("click", function() {
+  document.getElementById("lightbox").className = "";
+});
+
+document.getElementById("lightbox").addEventListener("click", function(e) {
+  if (e.target.id == "lightbox") {
+    document.getElementById("lightbox").className = "";
+  }
+});
+</STYLE>
+
 <h1>Hello? It's me</h1>
 <button id="clickme">I was wondering if after all these years you'd like to meet 
 </button>
