--- a/index.html
+++ b/index.html
@@ -50,3 +50,19 @@
     <img src="http://www.relatably.com/m/img/adele-memes-hello-from-the-other-side/image.png"</img>
   </div>
 </div>
+
+<style>
+  document.getElementById("clickme").addEventListener("click", function() {
+  document.getElementById("lightbox").className = "open";
+});
+
+document.getElementById("close").addEventListener("click", function() {
+  document.getElementById("lightbox").className = "";
+});
+
+document.getElementById("lightbox").addEventListener("click", function(e) {
+  if (e.target.id == "lightbox") {
+    document.getElementById("lightbox").className = "";
+  }
+});
+</style>
