--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 </div>
 
-<style>
+<script>
   document.getElementById("clickme").addEventListener("click", function() {
   document.getElementById("lightbox").className = "open";
 });
@@ -65,4 +65,4 @@ document.getElementById("lightbox").addEventListener("click", function(e) {
     document.getElementById("lightbox").className = "";
   }
 });
-</style>
+</script>
